[package]
name = "spinners"
version = "0.1.0"
edition = "2021"
description = "A crate for parsing SRTB files"
authors = ["Raoul1808"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Raoul1808/spinners"
keywords = ["srtb", "srxd"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[[example]]
name = "read_old"

[[example]]
name = "read_new"
